--- a/References.bib
+++ b/References.bib
@@ -1,3 +1,24 @@
+@article{agresti1998approximate,
+  author    = {Alan Agresti and Brent A. Coull},
+  title     = {Approximate Is Better than `Exact' for Interval Estimation of Binomial Proportions},
+  journal   = {The American Statistician},
+  volume    = {52},
+  number    = {2},
+  year      = {1998},
+  pages     = {119--126},
+  url       = {https://doi.org/10.2307/2685469}
+}
+
+@article{avise1987intraspecific,
+  author = {Avise, JC and Arnold, J and Ball, Jr., RM and Bermingham, E and Lamb, T and Neigel, JE and Reeb, CA and Saunders, NC},
+  title = {Intraspecific Phylogeography: The Mitochondrial {DNA} Bridge Between Population Genetics and Systematics},
+  journal = {Annu. Rev. Ecol. Syst.},
+  volume = {18},
+  year = {1987},
+  pages = {489--522},
+}
+
+
 @article {bartlett1992fins,
 	Title = {{FINS} (forensically informative nucleotide sequencing): {A} procedure for identifying the animal origin of biological specimens},
 	Author = {Bartlett, SE and Davidson, WS},
@@ -258,7 +279,7 @@ year = {1998}
 }
 
 @article{pentinsaari2016molecular,
-  author = {Pentinsaari, Mikko and Salmela, Heli and Mutanen, Marko and et al.},
+  author = {Pentinsaari, M and Salmela, H and Mutanen, M and Roslin, T},
   title = {Molecular evolution of a widely-adopted taxonomic marker ({COI}) across the animal tree of life},
   journal = {Scientific Reports},
   volume = {6},
@@ -341,7 +362,7 @@ doi = {10.1007/978-1-0716-3581-0_24},
 @misc{stan2023rstan,
   title = {{RStan}: {T}he {R} interface to {Stan}},
   author = {{Stan Development Team}},
-  note = {R package version 2.21.8},
+  note = {R package version 2.32.6},
   year = {2023},
   url = {https://mc-stan.org/}
 }
