--- a/References.bib
+++ b/References.bib
@@ -86,6 +86,18 @@ doi = {https://doi.org/10.1111/1755-0998.12046},
 year = {2013}
 }
 
+@article{dempster1977maximum,
+author = {Dempster, A. P. and Laird, N. M. and Rubin, D. B.},
+title = {Maximum Likelihood from Incomplete Data Via the EM Algorithm},
+journal = {Journal of the Royal Statistical Society: Series B (Methodological)},
+volume = {39},
+number = {1},
+pages = {1-22},
+doi = {https://doi.org/10.1111/j.2517-6161.1977.tb01600.x},
+year = {1977}
+}
+
+
 @book{gelman2014bayesian,
   author = {Gelman, A and Carlin, JB. and Stern, HS. and Duncan, DB and Vehtari, A and Rubin, DB},
   edition = {Third},
